--- a/CoreWebServicePOC/CoreWebServicePOC.csproj
+++ b/CoreWebServicePOC/CoreWebServicePOC.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\bshar\Source\Repos\CoreWebServicePOC\CoreWebServicePOC\bin\Debug\netcoreapp2.2\CoreWebServicePOC.xml</DocumentationFile>
+    <OutputPath>bin\Debug\netcoreapp2.2\</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
@@ -13,6 +18,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0-preview3-35497" PrivateAssets="All" />
     <PackageReference Include="SimpleInjector" Version="4.4.0" />
     <PackageReference Include="SimpleInjector.Integration.AspNetCore.Mvc" Version="4.4.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
   </ItemGroup>
 
   <ItemGroup>
